# CourseWork

./: pyproject.toml
src/: reports.py  services.py  user_settings.json  utils.py  views.py
tests/: test_simple_search.py
